Misc. updates and "final" .html file

--- a/marscal.html
+++ b/marscal.html
@@ -258,7 +258,7 @@ For Mars, there are several logical choices. One common suggestion has been to
 use the date of the first robotic landing on Mars (by the Viking lander, in 
 1976). This has the disadvantage that many common dates (such as the year of 
 someone's birth or some twentieth century event) might be negative dates. As of 
-late 2009, it has been nearly eighteen Martian years since Viking landed.
+early 2009, it has been roughly eighteen Martian years since Viking landed.
 
 <p>
 Another choice, used in the Darian calendar, is to mark the first year that 
@@ -283,8 +283,8 @@ orbit the sun about 188 times.
 
 <p>
 This, of course, makes it possible to quickly estimate a Martian year from an
-Earthly one, or vice versa. The Martian year 1000 would be approximately our
-year 1880; 
+Earthly one, or vice versa. Since Mars orbits the sun in 1.88 of our years,
+the Martian year 1000 would be approximately our year 1880.
 
 <p>
 So we know where our calendar starts and where each year starts. We know the 
@@ -361,6 +361,11 @@ distinguish the two. To be formal about year, we can always say "the year
 1071 MCE."
 
 <p>
+So given what we have so far, we can calculate that this past New Year's Day,
+(January 1, 2010) was the Martian date Tuesday, M-February 11, 1071 MCE.
+For another example, 
+
+<p>
 A natural question is: What holidays might be associated with this kind of 
 calendar? Well &mdash; we can't predict what religious or civil significance
 (if any) may be attached to various dates on Mars. I assume that when there are
@@ -406,12 +411,82 @@ itself was the anniversary of the Apollo 11 moon landing). This corresponds
 to the date Virgo 12, 1051 MCE (which was a Martian Tuesday).
 
 <p>
+It might make sense to celebrate the winter solstice on Mars, as every culture
+on Earth does. Although it won't matter <i>quite</i> as much as on ancient
+Earth, seasonal variations will still affect the Martian settlers.
+
+<p>
 Another big day might be the anniversary of the first human landing on Mars
-&mdaash; certainly a day worth celebrating hundreds of years into the future! 
+&mdash; certainly a day worth celebrating hundreds of years into the future! 
 But of course, we don't know yet when that day will be.
 
+<p>
+But what about Martian versions of Earthly holidays? Will there ever be a 
+Martian Thanksgiving or Halloween or any of those? Only time will tell.
 
-<b>To be continued...</b>
+<p>
+So far, we've discussed the calendar, but not timekeeping in terms of hours and
+minutes. There are two or three way of dealing with Martian time.
+
+<p>
+One school of thought says: Forget tradition; let's institute a totally new
+method of timekeeping. And there is some appeal to this. Most of our 
+measurements in modern times are "metric" or base-10 systems. Some have
+suggested dividing the day into 1,000 divisions that are like minutes (or
+100,000 that are like seconds). Such units might be called "ticks" or "beats"
+or other similar names; specifying a time of day might be as simple as 
+naming an integer, such as, "The time is now 592." Overall, however, this
+is too complex for my taste. It introduces totally new terminology and a new
+set of arbitrary units, and it's completely incompatible with what we're
+used to.
+
+<p>
+Another approach was taken by Kim Stanley Robinson in his Mars trilogy. In
+these novels, the Martian settlers measured time as we do from midnight to
+midnight -- but the extra 39 minutes were "off the clock." Time, in effect,
+"stopped" during the timeslip, which they used for relaxation or celebration.
+This is an entertaining solution, and my own concept is very similar.
+
+<p>
+The nearest thing we have to an "official" clock for Mars is the one used
+by many NASA scientists -- what is sometimes called <i>stretched time.</i>
+Because the Martian day is so near our own, it makes sense to divide it
+into 24 hours (each of which is about 4% longer than ours). So each 
+"stretched" hour is made up of 60 "stretched minutes" each of which is
+60 "stretched seconds." So this clock goes from midnight to midnight just
+as we're accustomed to.
+
+<p>
+One small problem with stretched time is that our common units now have
+different values. We use seconds and minutes to measure duration all the
+time; it's undesirable to have two separate standards for those (even
+though the difference is a little less than 3 percent).
+
+<p>
+What I propose is that we keep our usual hours, minutes, and seconds. We
+simply let the clock run longer (similar to Robinson's solution). So the
+day would start at 0:00 and run until roughly 24:39:35 (plus about a
+quarter of a second). If you're staring at the clock at the exact end of
+day, you will see a slight hesitation (or your clock will fall behind by 
+a fraction of a second).
+
+<p>
+This brings us to the issue of time zones. These can certainly be set up
+similarly to what we have on Earth, or we could dispense with them entirely.
+The Martian equivalent of Greenwich, by the way, is a little crater named
+<i>Airy Zero</i>, inside Airy Crater, naturally located on the prime 
+meridian, zero longitude.
+
+<p>
+At this point, someone will wonder about Daylight Saving Time. In my opinion,
+if there is one thing we could leave behind on Earth, this is it. (Even 
+discontinuing the practice on Earth might not be a bad idea.)
+
+<p>
+If we settle Mars, we will have countless challenges and opportunities 
+before us. Worrying about clocks and calendars will be only one of thousands
+of issues we have to face. So we do little projects like this one.  It is 
+wise, or at least fun, to take care of what we can ahead of time.
 
 </body>
 </html>
