"Finished" .html file

--- a/marscal.html
+++ b/marscal.html
@@ -41,7 +41,7 @@ material within minutes.
 Bear in mind when I talk in this article about "Earth's calendar," I am
 being a little unfair. We have had many different calendars in our history,
 and there are different ones in use even today. The calendar I refer to as 
-the Earthly" calendar is of course the Gregorian, probably the nearest 
+the "Earthly" calendar is of course the Gregorian, probably the nearest 
 thing to a universal calendar that humans have ever had.
 
 <p>
@@ -62,10 +62,11 @@ surface; the scientists on the Viking lander team naturally needed to talk
 about the "day and night" patterns of the world they were studying.
 
 <p>
-There are many people who use alternate terms for a Martian year. These include
-<i>mir</i> and <i>orb</i> (as in <i>orbit</i>). Others, like me, are content 
-to say "year" both for Earth and for Mars (and may sometimes disambiguate by 
-saying "Martian year," "Mars year," "M-year," or something similar).
+There are some people who want to use alternate terms for a Martian year. 
+These terms include <i>mir</i> and <i>orb</i> (as in <i>orbit</i>). Others, 
+like me, are content to say "year" both for Earth and for Mars (and may 
+sometimes disambiguate by saying "Martian year," "Mars year," "M-year," 
+or something similar).
 
 <p>
 One thing that makes calendars hard (even on Earth) is that the year is not
@@ -362,8 +363,20 @@ distinguish the two. To be formal about year, we can always say "the year
 
 <p>
 So given what we have so far, we can calculate that this past New Year's Day,
-(January 1, 2010) was the Martian date Tuesday, M-February 11, 1071 MCE.
-For another example, 
+(January 1, 2010) was the Martian date Tuesday, M-February 11, 1069 MCE.
+For another example: July 4, 2011 would be Thursday, the 13th of Aries (still
+in M-year 1069). The next Martian New Year (January 1, 1070 MCE) will be on
+September 13, 2011.
+
+<p>
+But be aware that I'm cheating when I say that some Earthly date is "the same"
+as some Martian date. After all, even on Earth we don't agree on what day it 
+is &mdash; for people in the USA, it's already "tomorrow" in some other parts
+of the world. In reality, a Martian date <i>overlaps</i> with an Earthly date.
+The crude conversion that I use is to take the beginning point of the date in 
+one calendar and ask: In what day (in the other calendar) does this timepoint 
+fall? But if you take into account timezones on Earth (and on Mars!), you will 
+occasionally disagree by a day.
 
 <p>
 A natural question is: What holidays might be associated with this kind of 
